<resources>
    <string name="app_name">MyNotesProject</string>
    <string name="note_hint">Note name</string>
    <string name="note_name">Note name</string>
    <string name="note_text_hint">Note text</string>
    <string name="note_text">Note text</string>
    <string name="text_notes_title">My notes</string>
    <string name="txt_note">Notes</string>
    <string name="txt_calendar">Calendar</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_about">About</string>
    <string name="txt_exit">Close</string>
    <string name="navigation_drawer_open" translatable="false">open</string>
    <string name="navigation_drawer_close" translatable="false">close</string>
    <string name="item_menu_add">Add</string>
    <string name="item_menu_delete">Delete</string>
    <string name="item_menu_update">Edit</string>
</resources>