<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuFragment"
    android:background="@color/yelow">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/text_notes_title"
        android:textAlignment="center"
        android:textSize="@dimen/button_text_size" />

       <Button
        android:id="@+id/button_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_note"
        android:textSize="@dimen/button_text_size"
        />

    <Button
        android:id="@+id/button_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_calendar"
        android:textSize="@dimen/button_text_size"
        />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_settings"
        android:textSize="@dimen/button_text_size"
        />
    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_about"
        android:textSize="@dimen/button_text_size"
        />

    <FrameLayout
        android:id="@+id/fragment_Container_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

</LinearLayout>