<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Ui.NoteDetailFragment"
    android:background="@color/yelow"
    android:focusable="true"
    android:clickable="true">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextName"
            android:hint="@string/note_hint"
            android:text="@string/note_name"
            android:background="@color/yelow"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:background="@color/yelow"
            android:text="@string/note_text"
            android:hint="@string/note_text_hint"/>



    </com.google.android.material.textfield.TextInputLayout>
    <DatePicker
        android:id="@+id/inputDate"
        android:layout_width="match_parent"
        android:layout_height="378dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />
</LinearLayout>